# docs/swagger.json
@@ -799,7 +799,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Create a new order from the buyer's cart, validate stock, deduct quantities, and clear the cart",
+                "description": "Create a new order with selected products, validate stock, deduct quantities",
                 "consumes": [
                     "application/json"
                 ],
@@ -810,6 +810,20 @@
                     "User Orders"
                 ],
                 "summary": "Place Order",
+                "parameters": [
+                    {
+                        "description": "List of products and quantities",
+                        "name": "order",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/user.OrderItemRequest"
+                            }
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Order placed successfully",
@@ -838,7 +852,7 @@
                         }
                     },
                     "400": {
-                        "description": "Bad Request: Cart is empty or insufficient stock",
+                        "description": "Validation Error",
                         "schema": {
                             "$ref": "#/definitions/helper.ErrorResponse"
                         }
@@ -1484,6 +1498,21 @@
                     "items": {
                         "type": "integer"
                     }
+                }
+            }
+        },
+        "user.OrderItemRequest": {
+            "type": "object",
+            "required": [
+                "product_id",
+                "quantity"
+            ],
+            "properties": {
+                "product_id": {
+                    "type": "integer"
+                },
+                "quantity": {
+                    "type": "integer"
                 }
             }
         },
